kubernetes/clusters/hyperion/couchdb/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb
  namespace: storage
  labels:
    backuplabel.certificate: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "couchdb.hyperion.aritrosinha.dpdns.org"
      secretName: couchdb-tls
  rules:
    - host: "couchdb.hyperion.aritrosinha.dpdns.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb-couchdb
                port:
                  number: 5984
